--- a/src/App.css
+++ b/src/App.css
@@ -47,7 +47,7 @@
 }
 /* //login css */
 
-.form-group select option {
+/* .form-group select option {
   color: #fff;
 }
 .form-bistkey .form-subscribe button {
@@ -204,4 +204,4 @@
   height: auto;
   background-color: #0d1725;
   
-}
+} */
